Fix the map width issue and gap between services and location

--- a/src/css/primary.css
+++ b/src/css/primary.css
@@ -79,3 +79,13 @@ ul>li{
     font-size: 20px;
     font-weight: 700;
 }
+/* media query */
+@media only screen and (max-width: 500px) {
+    .map-head{
+        width:100%;
+    }
+    .map {
+        width:100%;
+        height: 90%;
+    }
+  }
